<resources>
    <string name="app_name">MinorityOpinion</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="close_application">Close Application</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_button">PLAY</string>
</resources>
